# Laboratorios

./: .gitignore  INFORME_TECNICO_DETALLADO.md  README.md  covid_ecuador_spain.csv  definitions.py  exploracion_datos.py  explorar_estructura.py  pyproject.toml  resumen_chequeos_local.csv  resumen_ejecutivo_20250830_162941.csv  run_pipeline.py  tabla_perfilado.csv  test_pipeline.py
.devcontainer/: devcontainer.json
Lab 1/Modulo A/: funciones_internas_y_closures.py
Lab 1/Modulo B/: parsear_enteros.py  validacion_compra.py
Lab 2/Parte A/: ejemplo_uso.py  notas.txt  utilidades_numericas.py
Lab 2/Parte B/: main.py  notas.txt
Lab 2/Parte B/utilidades/: __init__.py  cadenas.py  numeros.py
Lab 2/Parte C/: ejemplos_type_hints.py  notas_type_hints.txt
Lab1/Modulo B/: contratos_funciones.py
Lab1/ModuloA/: mini_centro_comandos.py
ProyectoFinal/: INFORME_TECNICO_DETALLADO.md  reporte_covid_ecuador_spain_20250830_162941.xlsx  tabla_perfilado.csv
ProyectoFinal/covid_pipeline/: __init__.py  asset_reporte_excel.py  assets.py
covid_pipeline/: __init__.py  asset_chequeos_salida.py  assets.py
